View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028105 | Community | OCCT:Samples | public | 2016-11-15 08:10 | 2016-12-09 16:39 |
Reporter | Vico Liang | Assigned To | apn | ||
Priority | high | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0028105: HLR rendering crash in MFC sample | ||||
Description | The beta release package opencascade-7.1.0-vc10-64-beta.exe will crash if open HLR rendering option. This can be reproduced in MFC samples. It works fine in QT sample. | ||||
Steps To Reproduce | 1. Open MFC Visualization sample (mfc Viewer3d) 2. Click button "Cylinder" to display cylinder (5-th in the first row) 3. Click button "Hidden On" (last in the second row) ==> Application exits | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Sergey, please investigate the problem |
|
Branch CR28105 has been created by ski. SHA-1: 09411ad4067e6603ddbb7e80dbdb3f53950147af Detailed log of new commits: Author: ski Date: Fri Nov 18 14:31:58 2016 +0300 0028105: HLR rendering crash in MFC sample User_Cylinder class was updated according to work as single object in Prs3d_Presentation. |
|
Dear Andrey, occt branch CR28105 contains fix to avoid crash in mfc Visual3d sample. please review. |
|
Reviewed, please integrate (no regular testing is needed - sample only) |
|
Branch CR28105 has been deleted by kgv. SHA-1: 09411ad4067e6603ddbb7e80dbdb3f53950147af |
occt: master 4208cf18 2016-11-18 11:31:58
Committer: apn Details Diff |
0028105: HLR rendering crash in MFC sample User_Cylinder class was updated according to work as single object in Prs3d_Presentation. |
Affected Issues 0028105 |
|
mod - samples/mfc/standard/04_Viewer3d/src/Viewer3dDoc.cpp | Diff File | ||
mod - samples/mfc/standard/Common/User_Cylinder.cxx | Diff File | ||
mod - samples/mfc/standard/Common/User_Cylinder.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-11-15 08:10 | Vico Liang | New Issue | |
2016-11-15 08:10 | Vico Liang | Assigned To | => kgv |
2016-11-15 09:31 | kgv | Assigned To | kgv => msv |
2016-11-15 09:31 | kgv | Category | OCCT:Visualization => OCCT:Modeling Algorithms |
2016-11-15 09:48 |
|
Note Added: 0060334 | |
2016-11-15 09:48 |
|
Assigned To | msv => ski |
2016-11-15 09:48 |
|
Priority | normal => high |
2016-11-15 09:48 |
|
Status | new => assigned |
2016-11-15 09:48 |
|
Category | OCCT:Modeling Algorithms => OCCT:Samples |
2016-11-15 09:48 |
|
Steps to Reproduce Updated | |
2016-11-18 14:32 | git | Note Added: 0060531 | |
2016-11-22 10:49 |
|
Note Added: 0060656 | |
2016-11-22 10:49 |
|
Assigned To | ski => abv |
2016-11-22 10:49 |
|
Status | assigned => resolved |
2016-11-22 10:49 |
|
Steps to Reproduce Updated | |
2016-11-22 11:10 |
|
Note Added: 0060662 | |
2016-11-22 11:10 |
|
Assigned To | abv => bugmaster |
2016-11-22 11:10 |
|
Status | resolved => reviewed |
2016-11-22 12:25 |
|
Test case number | => Not needed |
2016-11-22 12:25 |
|
Status | reviewed => tested |
2016-11-24 15:52 | apn | Changeset attached | => occt master 4208cf18 |
2016-11-24 15:52 | apn | Assigned To | bugmaster => apn |
2016-11-24 15:52 | apn | Status | tested => verified |
2016-11-24 15:52 | apn | Resolution | open => fixed |
2016-12-07 11:31 | git | Note Added: 0061297 | |
2016-12-09 16:29 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |