0028105: HLR rendering crash in MFC sample

User_Cylinder class was updated according to work as single object in Prs3d_Presentation.